# occupancy-wait-estimation

./: README.md  SESSION_NOTES.md  pyproject.toml
data/scenarios/multiple_bunched_arrivals/FLPC05_in/: events.csv
data/scenarios/multiple_bunched_departures/: metrics.csv  scenario.json
data/scenarios/multiple_bunched_departures/PPC_in/: events.csv
data/scenarios/multiple_overlapping_arrivals/: metrics.csv  scenario.json
data/scenarios/single_arrival_flight/: metrics.csv  scenario.json
data/scenarios/single_departure_flight/: metrics.csv
scripts/: benchmark_multiple_bunched_arrivals.py  benchmark_multiple_bunched_departures.py  benchmark_multiple_overlapping_arrivals.py  benchmark_single_arrival.py  benchmark_single_departure.py  generate_multiple_bunched_arrivals.py  generate_multiple_bunched_departures.py  generate_multiple_overlapping_arrivals.py  generate_single_arrival_scenario.py  plot_episode_boundaries.py  plot_flows.py  plot_multiple_bunched_arrivals.py  plot_multiple_bunched_departures.py  plot_multiple_overlapping_arrivals.py  run_episode_reconciliation.py  run_reconciliation.py
src/kff_v2/: __init__.py  episodes.py  interface.py  presets.py  reconcile.py
src/occupancy_wait_estimation/: __init__.py  episodes.py  fifo.py  interface.py  metrics.py  presets.py
tests/: test_adaptive_inflow_prior.py  test_edge_cases.py  test_episode_pipeline.py  test_fifo_waits.py  test_input_hardening.py  test_interface_estimate_queue.py  test_metrics.py  test_multiplicative_inflow_prior.py  test_outflow_shaping.py  test_perfect_qp_stability.py  test_presets.py  test_reconcile_qp.py  test_relative_inflow_weighting.py
(+8 files in other folders)
