[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "occupancy-wait-estimation"
version = "0.1.2"
description = "Occupancy and wait estimation from noisy in/out person counts."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "occupancy-wait-estimation contributors" }
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "cvxpy>=1.5",
  "osqp>=0.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "matplotlib>=3.8",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"
